[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Nikolay Andreev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
yapf = "^0.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
